--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "hello-world",
-  "description": "hello world test app",
+  "name": "cvince-portfolio-site",
+  "description": "Vincent Chan Porfolio",
   "version": "0.0.1",
   "private": true,
   "dependencies": {
